samples/_failures_safe/1761514544_c4a89b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d591e0a.c: In function ‘main’:
./samples/SAFE/__tmp_6d591e0a.c:129:13: error: expected ‘;’ at end of input
  129 |         line
      |             ^
      |             ;
./samples/SAFE/__tmp_6d591e0a.c:129:9: error: expected declaration or statement at end of input
  129 |         line
      |         ^~~~
./samples/SAFE/__tmp_6d591e0a.c:129:9: error: expected declaration or statement at end of input
